agregado de seo y sass

--- a/nosotros.html
+++ b/nosotros.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nosotros</title>
+    <meta name="description=" content="Historia de Puerto Génova, como nació la empresa y como se desarrolla en una posición lider de un mercado tan cambiante como desafiante">
+    <meta name="keywords=" content="historia, puerto génova, empresa">
+    <title>Nosotros</title>
     <link rel="stylesheet" href="./estilos.css">
     <script src="https://kit.fontawesome.com/487a1d01f0.js" crossorigin="anonymous"></script>
 </head>
