--- a/productos.html
+++ b/productos.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>productos</title>
+    <meta name="description=" content="Productos para preparar y pre-fritos listos para cocinar de excelente calidad. Comercialización de marcas líderes del mercado.">
+    <meta name="keywords=" content="pollo entero, pata muslo, suprema sin hueso, ala, medallón de pollo, verdeo, bocaditos de pollo">
+    <title>Productos</title>
     <link rel="stylesheet" href="./estilos.css">
     <script src="https://kit.fontawesome.com/487a1d01f0.js" crossorigin="anonymous"></script>
 </head>
