--- a/rrhh.html
+++ b/rrhh.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>rrhh</title>
+    <meta name="description" content="Página de contacto para trabajar con Puerto Génova. Contáctate y deja tu CV para aplicar a los puestos de trabajo que la empresa ofrece">
+    <meta name="keywords=" content="rrhh, recursos humanos, curriculum vitae, cv">
+    <title>Recursos Humanos</title>
     <link rel="stylesheet" href="./estilos.css">
     <script src="https://kit.fontawesome.com/487a1d01f0.js" crossorigin="anonymous"></script>
 </head>
