--- a/contacto.html
+++ b/contacto.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>contacto</title>
+    <meta name="description" content="Contacto con Puerto Génova. Escribinos y ponete en contacto con nosotros, respondemos a la brevedad">
+    <meta name="keywords=" content="contacto, contactate, comunicate, escribinos, email">
+    <title>Página de contacto</title>
     <link rel="stylesheet" href="./estilos.css">
     <script src="https://kit.fontawesome.com/487a1d01f0.js" crossorigin="anonymous"></script>
 </head>
 <body>
+
 
     <Header>
         <div class="logo">
