--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pagina principal</title>
+    <meta name="description" content="Venta de pollos y productos derivados, pollo entero, trozado y Pre-fritos de la mejor calidad del mercado">
+    <meta name="keywords=" content="pollo, entero, pechuga, pata y muslo, pre-fritos, supremas, trozado">
+    <title>Puerto Génova - Venta mayorista y minorista de pollo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
@@ -12,7 +14,7 @@
     <script src="https://kit.fontawesome.com/487a1d01f0.js" crossorigin="anonymous"></script>
 </head>
 
-<body> 
+<body>
     <Header>
         <div class="logo">
             <a href="#">
@@ -118,10 +120,10 @@
         </div>
     </div>
     <div class="foot2">
-        <p class="contactoFooter">Contacto:</p>
-        <p>Teléfono: 2804-404-1212</p>
-        <p>Dirección: Hipólito Hirigoyen 2052, Rada Tilly, Chubut</p>
-        <p>Email: puertogenovaventas@gmail.com</p>
+        <div><p class="contactoFooter">Contacto:</p></div>
+        <div class="par--fut1"><p>Teléfono: 2804-404-1212</p></div>
+        <div class="par--fut2"><p>Dirección: Hipólito Hirigoyen 2052, Rada Tilly, Chubut</p></div>
+        <div class="par--fut3"><p>Email: puertogenovaventas@gmail.com</p></div>
     </div>
 </footer>
 
