--- a/index.html
+++ b/index.html
@@ -44,24 +44,24 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/imagenes/1.jpg" class="d-block w-100" alt="imagen1">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Calidad asegurada</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
+                <img src="/imagenes/carousel1.jpg" class="d-block w-100" alt="Pollo con especias">
+                <div class="carousel-caption">
+                    <h5>Calidad garantizada</h5>
+                    <p>Trabajamos con los frigoríficos más importantes del país</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/imagenes/2.jpg" class="d-block w-100" alt="imagen2">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
+                <img src="/imagenes/carousel2.jpg" class="d-block w-100" alt="Pollo trozado fresco">
+                <div class="carousel-caption">
+                    <h5>Productos frescos</h5>
+                    <p>Garantizamos el correcto seguimiento de la cadena de frío de cada producto</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/imagenes/4.jpg" class="d-block w-100" alt="imagen3">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
+                <img src="/imagenes/carousel3.jpg" class="d-block w-100" alt="Persona con celular y notebook">
+                <div class="carousel-caption">
+                    <h5 class="car3">Atención personalizada</h5>
+                    <p class="car3">Atención a hoteles, empresas, carnicerías, pollerías y clientes particulares</p>
                 </div>
             </div>
         </div>
