cambios en footer

--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
         </div>
     </div>
     <div class="foot2">
-        <div><p class="contactoFooter">Contacto:</p></div>
-        <div class="par--fut1"><p>Teléfono: 2804-404-1212</p></div>
-        <div class="par--fut2"><p>Dirección: Hipólito Hirigoyen 2052, Rada Tilly, Chubut</p></div>
-        <div class="par--fut3"><p>Email: puertogenovaventas@gmail.com</p></div>
+        <p class="contactoFooter">Contacto:</p>
+        <p>Teléfono: 2804-404-1212</p>
+        <p>Dirección: Hipólito Hirigoyen 2052, Rada Tilly, Chubut</p>
+        <p>Email: puertogenovaventas@gmail.com</p>
     </div>
 </footer>
 
