arreglos de scss

--- a/contacto.html
+++ b/contacto.html
@@ -12,7 +12,6 @@
 </head>
 <body>
 
-
     <Header>
         <div class="logo">
             <a href="#">
@@ -23,19 +22,20 @@
             <ul class="menuItems">
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="productos.html">PRODUCTOS</a></li>
-                <li><a href="#">NOSOTROS</a></li>
-                <li><a href="rrhh.html">RRHH</a></li>
-                <li><a href="contacto.html">CONTACTO</a></li>
+                <li><a href="nosotros.html">NOSOTROS</a></li>
+                <li><a href="#">CONTACTO</a></li>
             </ul>
         </nav>
     </Header>
 
 
-<main class="containerContacto">
-    <h2>Contacto</h2>
+<main class="mainContacto">
+    <div class="contactoTitulo">
+        <h1>Contacto</h1>
+    </div>
     <div class="containerFormulario">
         <form class="formularioContacto" action="" method="get">
-            <h3>Dejanos tu mensaje</h3>
+            <h2>Dejanos tu mensaje</h2>
             <input type="text" name="Nombre" placeholder="Nombre">
             <input type="text" name="Apellido" placeholder="Apellido">
             <input type="text" name="Correo" placeholder="Correo">
