--- a/index.html
+++ b/index.html
@@ -26,13 +26,12 @@
                 <li><a href="#">HOME</a></li>
                 <li><a href="productos.html">PRODUCTOS</a></li>
                 <li><a href="nosotros.html">NOSOTROS</a></li>
-                <li><a href="rrhh.html">RRHH</a></li>
                 <li><a href="contacto.html">CONTACTO</a></li>
             </ul>
         </nav>
     </Header>
 
-<main>
+<main class="mainIndex">
 
 <div class="contenedorGridIndex">
     <!--Carousel de imágenes cambiar imagenes, comentarios y poner todas al mismo tamaño-->
@@ -76,17 +75,30 @@
     </div>
 
     <div class="porque">
-        <h2>¿Por qué nos eligen?</h2>
+        <h1>¿Por qué nos eligen?</h1>
     </div>
     <!--Acá van las 3 imágenes explicando por qué nos eligen-->
-    <div class="porque1">
-        <p style="text-align: center;">acá va a ir una imagen</p>
+
+    <div class="porque1 indexCard">
+        <i class="fas fa-regular fa-award"></i>
+        <h2>Calidad</h2>
+        <div class="cardText">
+        <p>Aseguramos la continuidad de la cadena de frío de todos nuestros productos hasta su entrega.</p>
+        </div>
     </div>
-    <div class="porque2">
-        <p style="text-align: center;">acá va a ir una imagen</p>
-    </div>
-    <div class="porque3">
-        <p style="text-align: center;">acá va a ir una imagen</p>
+    <div class="porque2 indexCard">
+        <i class="fas fa-duotone fa-check"></i>
+        <h2>Confianza</h2>
+        <div class="cardText">
+        <p>Nos avala nuestra amplia red de clientes a lo largo de toda la patagonia.</p>
+        </div>
+        </div>
+    <div class="porque3 indexCard">
+        <i class="far fa-duotone fa-handshake"></i>
+        <h2>Compromiso</h2>
+        <div class="cardText">
+        <p>Cada cliente es importante para nosotros, por eso tomamos cada venta con suma responsabilidad.</p>
+        </div>
     </div>
 
     <!--Acá van las 2 imágenes de venta mayorista y minorista-->
