--- a/productos.html
+++ b/productos.html
@@ -24,18 +24,17 @@
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="#">PRODUCTOS</a></li>
                 <li><a href="nosotros.html">NOSOTROS</a></li>
-                <li><a href="rrhh.html">RRHH</a></li>
                 <li><a href="contacto.html">CONTACTO</a></li>
             </ul>
         </nav>
     </Header>
 
 
-<main class="contenedorProductos">
+<main class="mainProductos">
     
     <section class="gridProductos">
         <div class="productosItem productosTitulo">
-            <p>Productos</p>
+            <h1>Productos</h1>
         </div>
         <div class="productosItem productosSubtitulo1">
             <h2>Para preparar</h2>
@@ -54,10 +53,6 @@
         <div class="productosImg img9"><img src="./imagenes/p5.jpg" alt="img prefritos 5"></div>
         <div class="productosImg img10"><img src="./imagenes/p6.jpg" alt="img prefritos 6"></div>
     </section>
-    
-
-
-    <!--Acá vienen las 9 imagenes de Pre-fritos-->
 
 </main>
 
