--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/imagenes/carousel1.jpg" class="d-block w-100" alt="Pollo con especias">
+                <img src="./imagenes/carousel1.jpg" class="d-block w-100" alt="Pollo con especias">
                 <div class="carousel-caption">
                     <h5>Calidad garantizada</h5>
                     <p>Trabajamos con los frigoríficos más importantes del país</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/imagenes/carousel2.jpg" class="d-block w-100" alt="Pollo trozado fresco">
+                <img src="./imagenes/carousel2.jpg" class="d-block w-100" alt="Pollo trozado fresco">
                 <div class="carousel-caption">
                     <h5>Productos frescos</h5>
                     <p>Garantizamos el correcto seguimiento de la cadena de frío de cada producto</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/imagenes/carousel3.jpg" class="d-block w-100" alt="Persona con celular y notebook">
+                <img src="./imagenes/carousel3.jpg" class="d-block w-100" alt="Persona con celular y notebook">
                 <div class="carousel-caption">
                     <h5 class="car3">Atención personalizada</h5>
                     <p class="car3">Atención a hoteles, empresas, carnicerías, pollerías y clientes particulares</p>
