--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/imagenes/1.jpg" class="d-block w-100" alt="imagen1">
+                <img src="/.imagenes/1.jpg" class="d-block w-100" alt="imagen1">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Calidad asegurada</h5>
                     <p>Some representative placeholder content for the first slide.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/imagenes/2.jpg" class="d-block w-100" alt="imagen2">
+                <img src="/.imagenes/2.jpg" class="d-block w-100" alt="imagen2">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Second slide label</h5>
                     <p>Some representative placeholder content for the second slide.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/imagenes/4.jpg" class="d-block w-100" alt="imagen3">
+                <img src="/.imagenes/4.jpg" class="d-block w-100" alt="imagen3">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Third slide label</h5>
                     <p>Some representative placeholder content for the third slide.</p>
