--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
 
     <!--Acá van las 2 imágenes de venta mayorista y minorista-->
     <article class="wow animate__animated animate__fadeInLeft contenedorMinorista">
-        <img src="../imagenes/indexizq.jpg" alt="pollo venta minorista">
+        <img src="./imagenes/indexizq.jpg" alt="pollo venta minorista">
         <div class="recuadroMinorista">
             <h2>VENTA MINORISTA</h2>
             <p>Llevamos nuestros productos hasta la puerta de tu casa asegurando calidad y frescura. Contactate con nosotros para comprar pollo y productos elaborados de primera calidad. ¡Llegamos a todo Chubut!</p>
         </div>
     </article>
     <article class="wow animate__animated animate__fadeInLeft contenedorMayorista">
-        <img src="../imagenes/indexder.jpg" alt="pollo venta mayorista">
+        <img src="./imagenes/indexder.jpg" alt="pollo venta mayorista">
         <div class="recuadroMinorista">
             <h2>VENTA MAYORISTA</h2>
             <p>Comercializamos pollo fresco y derivados de la mejor calidad y frescura. Estamos presentes en Hoteles, Restaurantes, Universidades, Comedores Industriales, Instituciones Educativas y Empresas. Precios especiales para repartidores y para negocios con compras superiores a 70 cajones semanales.</p>
